--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#A50A15</color>
+    <color name="redAssent">#870912</color>
+    <color name="logoColor">#ea1d2c</color>
+    <color name="redDark">#a50a15</color>
+    <color name="colorButton">#ff404e</color>
 </resources>
