--- a/app/src/main/res/layout/activity_autenticacao.xml
+++ b/app/src/main/res/layout/activity_autenticacao.xml
@@ -41,18 +41,17 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp">
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="wrap_content"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/login"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white" />
 
         <Switch
             android:id="@+id/switchAcesso"
@@ -64,11 +63,47 @@
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="wrap_content"
+            android:layout_width="65dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/sing_up"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearTipoUsuario"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:visibility="gone"
+        tools:visibility="visible">
+
+        <TextView
+            android:id="@+id/txtUsuario"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Usuario"
+            android:textColor="@color/white" />
+
+        <Switch
+            android:id="@+id/switchTipoUsuario"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_weight="1" />
+
+        <TextView
+            android:id="@+id/txtEmpresa"
+            android:layout_width="65dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Empresa"
+            android:textColor="@color/white" />
     </LinearLayout>
 
     <Button
@@ -77,6 +112,5 @@
         android:layout_height="wrap_content"
         android:text="@string/acces"
         android:padding="16dp"
-        android:theme="@style/botaoPadrao"
-        android:onClick="Acessar"/>
+        android:theme="@style/botaoPadrao" />
 </LinearLayout>
