--- a/app/src/main/res/layout/activity_autenticacao.xml
+++ b/app/src/main/res/layout/activity_autenticacao.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ea1d2c"
     android:gravity="center"
     android:orientation="vertical"
-    android:background="@color/logoColor"
     android:padding="16dp"
     tools:context=".activity.AutenticacaoActivity">
 
@@ -18,30 +18,31 @@
         android:layout_marginBottom="20dp"/>
 
     <EditText
-        android:id="@+id/editLoginEmail"
+        android:id="@+id/editCadastroEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/e_mail"
-        android:inputType="textEmailAddress"
         android:background="@drawable/bg_edit_text"
-        android:padding="16dp"/>
+        android:ems="10"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
+        android:padding="16dp" />
 
     <EditText
-        android:id="@+id/editLoginSenha"
+        android:id="@+id/editCadastroSenha"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/password"
-        android:inputType="textPassword"
+        android:layout_marginTop="-2dp"
         android:background="@drawable/bg_edit_text"
-        android:padding="16dp"
-        android:layout_marginTop="-2dp"/>
+        android:ems="10"
+        android:hint="Senha"
+        android:inputType="textPassword"
+        android:padding="16dp" />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -49,68 +50,60 @@
             android:id="@+id/textView"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/login"
-            android:textColor="@color/white" />
+            android:text="Logar"
+            android:textColor="@android:color/white" />
 
         <Switch
             android:id="@+id/switchAcesso"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_weight="1" />
+            android:layout_marginRight="10dp" />
 
         <TextView
-            android:id="@+id/textView2"
-            android:layout_width="65dp"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/sing_up"
-            android:textColor="@color/white" />
+            android:text="Cadastre-se"
+            android:textColor="@android:color/white" />
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/linearTipoUsuario"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="10dp"
         android:gravity="center"
         android:orientation="horizontal"
         android:visibility="gone"
         tools:visibility="visible">
 
         <TextView
-            android:id="@+id/txtUsuario"
+            android:id="@+id/textView2"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Usuario"
-            android:textColor="@color/white" />
+            android:text="Usuário"
+            android:textColor="@android:color/white" />
 
         <Switch
             android:id="@+id/switchTipoUsuario"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_weight="1" />
+            android:layout_marginRight="10dp" />
 
         <TextView
-            android:id="@+id/txtEmpresa"
-            android:layout_width="65dp"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:text="Empresa"
-            android:textColor="@color/white" />
+            android:textColor="@android:color/white" />
     </LinearLayout>
 
     <Button
-        android:id="@+id/btnAcesso"
+        android:id="@+id/buttonAcesso"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/acces"
+        android:text="Acessar"
         android:padding="16dp"
-        android:theme="@style/botaoPadrao" />
+        android:theme="@style/botaoPadrao"/>
+
 </LinearLayout>
