--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,20 +1,20 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.IFoodClone" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.IFoodClone" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/white</item>
-        <item name="colorPrimaryVariant">@color/black</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@android:color/white</item>
+        <item name="colorPrimaryVariant">@android:color/black</item>
+        <item name="colorOnPrimary">@android:color/black</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/red</item>
+        <item name="colorSecondary">@android:color/holo_red_light</item>
         <item name="colorSecondaryVariant">@color/red</item>
-        <item name="colorOnSecondary">@color/red</item>
+        <item name="colorOnSecondary">@android:color/holo_red_light</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="botaoPadrao" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="botaoPadrao" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="colorControlHighlight">@color/colorButton</item>
         <item name="colorButtonNormal">@color/redAssent</item>
         <item name="android:textColor">@android:color/white</item>
